--- a/SE/Balance.html
+++ b/SE/Balance.html
@@ -99,23 +99,34 @@
     <a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
   <nav>
-    <ul class="menu">
-      <li><a href="ClientPage.html" id="home">Home</a></li>
-      <li><a href="ContactUs.html" id="contact">Contact</a></li>
-      <li class="dropdown">
-        <a href="#" id="my-account">My Account &#9662;</a>
-        <ul class="dropdown-menu">
-          <li><a href="Personalinfo.html">Personal Information</a></li>
-          <li><a href="Liabilities.html">Liabilities</a></li>
-          <li><a href="Balance.html">Balance</a></li>
-		  
-        </ul>
-      </li>
-	   <li><a href="Transfer.html">Transfer</a></li>
-	    <li><a href="Bills.html">Bills</a></li>
-      <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-    </ul>
-  </nav>
+      <ul class="menu">
+        <li><a href="ClientPage.html" id="home">Home</a></li>
+        <li><a href="ContactUs.html" id="contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" id="my-account">My Account &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="Personalinfo.html">Personal Information</a></li>
+            <li><a href="Liabilities.html">Liabilities</a></li>
+            <li><a href="Balance.html">Balance</a></li>
+			
+          </ul>
+        </li>
+		
+		 <li><a href="Transfer.html">Transfer</a></li>
+		  <li><a href="Bills.html">Bills</a></li>
+		   <li class="dropdown">
+          <a href="#" id="my-account">Transactions &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="ClientTransactions.html">View All Transactions</a></li>
+            <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+            
+			
+          </ul>
+        </li>
+		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+
+      </ul>
+    </nav>
   <main>
     <div class="left-side">
       <h2>Savings:</h2>
