--- a/SE/ClientPage.html
+++ b/SE/ClientPage.html
@@ -22,7 +22,7 @@
   </header>
    <nav>
       <ul class="menu">
-        <li><a href="Home.html" id="home">Home</a></li>
+        <li><a href="ClientPage.html" id="home">Home</a></li>
         <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" id="my-account">My Account &#9662;</a>
@@ -33,8 +33,18 @@
 			
           </ul>
         </li>
+		
 		 <li><a href="Transfer.html">Transfer</a></li>
-		 <li><a href="Bills.html">Bills</a></li>
+		  <li><a href="Bills.html">Bills</a></li>
+		   <li class="dropdown">
+          <a href="#" id="my-account">Transactions &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="ClientTransactions.html">View All Transactions</a></li>
+            <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+            
+			
+          </ul>
+        </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
