--- a/SE/Personalinfo.html
+++ b/SE/Personalinfo.html
@@ -71,8 +71,18 @@
 			
           </ul>
         </li>
+		
 		 <li><a href="Transfer.html">Transfer</a></li>
 		  <li><a href="Bills.html">Bills</a></li>
+		   <li class="dropdown">
+          <a href="#" id="my-account">Transactions &#9662;</a>
+          <ul class="dropdown-menu">
+            <li><a href="ClientTransactions.html">View All Transactions</a></li>
+            <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+            
+			
+          </ul>
+        </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
 
       </ul>
