--- a/SE/Bills_admin.html
+++ b/SE/Bills_admin.html
@@ -87,18 +87,18 @@
     <a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
   <nav>
-    <ul class="menu">
+    <ul  class="menu">
       <li><a href="AdminPage.html" id="home">Home</a></li>
       <li><a href="ContactUs.html" id="contact">Contact</a></li>
-      <li class="dropdown">
+      <li hidden class="dropdown">
         <a href="#" id="client-account">Client's Account &#9662;</a>
-        <ul class="dropdown-menu">
+        <ul  class="dropdown-menu">
           <li><a href="Personalinfo_admin.html">Personal Information</a></li>
           <li><a href="Liabilities_admin.html">Liabilities</a></li>
           <li><a href="Balance_admin.html">Balance</a></li>
         </ul>
       </li>
-	   <li><a href="Transfers_history.html">Transfer</a></li>
+	   <li hidden><a href="Transfers_history.html">Transfer</a></li>
 	   <li><a href="Bills_admin.html">Bills</a></li>
       <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
     </ul>
