--- a/SE/ContactUs.html
+++ b/SE/ContactUs.html
@@ -16,6 +16,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
+			overflow:hidden;
         }
 
         .container {
@@ -136,6 +137,7 @@
     </ul>
 </nav>
 <body>
+
 <div class="container">
     <div class="block connect-with-us">
         <h2>Connect with Us</h2>
