--- a/SE/Personalinfo.html
+++ b/SE/Personalinfo.html
@@ -106,35 +106,32 @@
     <h1>Personal Information</h1>
 	<a href="Home.html" class="sign-out-button">Sign Out</a>
   </header>
-   <nav>
-      <ul class="menu">
-        <li><a href="ClientPage.html" id="home">Home</a></li>
-        <li><a href="ContactUs.html" id="contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" id="my-account">My Account &#9662;</a>
-          <ul class="dropdown-menu">
-            <li><a href="Personalinfo.html">Personal Information</a></li>
-            <li><a href="Liabilities.html">Liabilities</a></li>
-            <li><a href="Balance.html">Balance</a></li>
-			
-          </ul>
-        </li>
-		
-		 <li><a href="Transfer.html">Transfer</a></li>
-		  <li><a href="Bills.html">Bills</a></li>
-		   <li class="dropdown">
-          <a href="#" id="my-account">Transactions &#9662;</a>
-          <ul class="dropdown-menu">
-            <li><a href="ClientTransactions.html">View All Transactions</a></li>
-            <li><a href="CardTransactions.html">View Cards Transactions</a></li>
-            
-			
-          </ul>
-        </li>
-		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
-      </ul>
-    </nav>
+    <nav>
+    <ul class="menu">
+      <li><a href="ClientPage.html" id="home">Home</a></li>
+      <li><a href="ContactUs.html" id="contact">Contact</a></li>
+      <li class="dropdown">
+        <a href="#" id="my-account">My Account &#9662;</a>
+        <ul class="dropdown-menu">
+          <li><a href="Personalinfo.html">Personal Information</a></li>
+          <li><a href="Liabilities.html">Liabilities</a></li>
+          <li><a href="Balance.html">Balance</a></li>
+        </ul>
+      </li>
+      <li><a href="Transfer.html">Transfer</a></li>
+      <li><a href="Bills.html">Bills</a></li>
+      <li class="dropdown">
+        <a href="#" id="my-account">Transactions &#9662;</a>
+        <ul class="dropdown-menu">
+          <li><a href="ClientTransactions.html">View All Transactions</a></li>
+          <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+        </ul>
+      </li>
+	  <li><a href="CreditCardPoints.html">My Points</a></li>
+      <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+	   <li><a href="Urgent.html" id="urgent">Urgent</a></li>
+    </ul>
+  </nav>
   <main>
     <div class="left-side">
       <h2>Personal Information</h2>
