--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -108,11 +108,11 @@
           <li><a href="Personalinfo_Banker.html">Personal Information</a></li>
           <li><a href="Liabilities_Banker.html">Liabilities</a></li>
           <li><a href="Balance_Banker.html">Balance</a></li>
+          <li><a href="ClientTransactions.html">Transactions</a></li>
         </ul>
       </li>
-	   <li><a href="Transfers_history.html" id = "transfer">Transfer</a></li>
-       <li><a href="Bills_Banker.html">Bills</a></li>
       <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+      
     </ul>
   </nav>
   <main>
