--- a/SE/AdminPage.html
+++ b/SE/AdminPage.html
@@ -24,7 +24,7 @@
     }
     .right_side{
       float: right;
-            width: 150%;
+            width: 100%;
             padding-right: 10px;
             box-sizing: border-box;
             display: flex;
@@ -96,7 +96,26 @@
   .admin-dropdown-menu li a:hover {
     background-color: #e0e0e0;
   }
-  
+  .notifications-window {
+    width: 150%;
+    padding: 20px;
+    
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .notifications-window:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 180px;
+  background-image: url('notif.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
     
     </style>
 </head>
@@ -114,19 +133,18 @@
    <nav>
       <ul  class="admin-menu">
         <li><a href="Home.html" id="home">Home</a></li>
-        <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown" >
           <a href="#" id="client's_account">Client's Account &#9662;</a>
           <ul class="admin-dropdown-menu" >
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
+            <li><a href="ClientTransactions.html">Transactions</a></li>
           </ul>
         </li>
         <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-        	 <li><a href="Bills_admin.html">Bills</a></li>
            <li><a href="Complaints_admin.html">Complaints</a></li>
-        <li><a href="Transfers_history.html" id="transfers">Transfers</a></li>
+           <li><a href="Close-requests.html">Request accounts close</a></li>
       </ul>
    </nav>
       <div class="center_container">
@@ -149,6 +167,13 @@
 	<div class="banner" id="announce-banner">
   <span class="banner-text" id="announceInfo-banner-text"></span>
 </div>
+<div class="notifications-window">
+  <h2>Notifications</h2>
+  <ul>
+    <li>New Announcement: "Security Alert: Phishing Scam Warning"</li>
+    <li>New Announcement: "Important Notice: Scheduled Manitenance"</li>
+  </ul>
+</div>
 <footer>
   <p>&copy; 2023 ABG Bank. All rights reserved.</p>
 </footer>
@@ -158,7 +183,7 @@
     var userButton = document.querySelector('.UseridButton');
     userButton.addEventListener('click', function() {
       var user_id = document.getElementById('userid-input').value;
-      alert('Gaining access of User with an id ' + user_id);
+      alert('Gaining access to User with an id ' + user_id);
        document.getElementsByClassName('admin-dropdown-menu')[0].style.visibility = "visible"; 
    
   });
