--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -34,13 +34,13 @@
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
-			
+            <li><a href="ClientTransactions.html">Transfer</a></li>	
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
-		 <li><a href="Transfer.html">Transfer</a></li>
-		 <li><a href="Bills_Banker.html">Bills</a></li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
+    <li><a href="Complaints_banker.html">Complaints</a></li>
       </ul>
     </nav>
     </body>
