--- a/SE/Loan_requests.html
+++ b/SE/Loan_requests.html
@@ -62,8 +62,8 @@
             <li><a href="Personalinfo_admin.html">Personal Information</a></li>
             <li><a href="Liabilities_admin.html">Liabilities</a></li>
             <li><a href="Balance_admin.html">Balance</a></li>
-            <li><a href="Loan_request.html">Loan requests</a></li>
-            <li><a href="Credit_request.html">Credit requests</a></li>
+            <li><a href="Loan_requests.html">Loan requests</a></li>
+            <li><a href="Credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
