--- a/SE/Liabilities_Banker.html
+++ b/SE/Liabilities_Banker.html
@@ -99,8 +99,8 @@
           </tr>
         </tbody>
       </table>
-      <button class="credit-card-button">Accept</button>
-      <button class="credit-card-button">Reject</button>
+      <button class="credit-card-button">Accept Loan</button>
+      <button class="credit-card-button">Reject Loan</button>
     </div>
     <div class="right-side">
       <h2>Loans</h2>
