--- a/SE/ClientContact.html
+++ b/SE/ClientContact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
-    <title>Banker's Contact Us</title>
+    <title>Client's Contact Us</title>
     <style>
         body {
             margin: 0;
@@ -119,23 +119,30 @@
 </header>
 <nav>
     <ul class="menu">
-        <li><a href="BankerPage.html" id="home">Home</a></li>
-        <li><a href="ContactUs.html" id="contact">Contact</a></li>
-        <li class="dropdown">
-            <a href="#" id="client-account">Client's Account &#9662;</a>
-            <ul class="dropdown-menu">
-                <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
-                <li><a href="Liabilities_Banker.html">Liabilities</a></li>
-                <li><a href="Balance_Banker.html">Balance</a></li>
-
-            </ul>
-        </li>
-        <li><a href="Transfer.html">Transfer</a></li>
-        <li><a href="Bills_Banker.html">Bills</a></li>
-        <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-
+      <li><a href="ClientPage.html" id="home">Home</a></li>
+      <li><a href="ClientContact.html" id="contact">Contact</a></li>
+      <li class="dropdown">
+        <a href="#" id="my-account">My Account &#9662;</a>
+        <ul class="dropdown-menu">
+          <li><a href="Personalinfo.html">Personal Information</a></li>
+          <li><a href="Liabilities.html">Liabilities</a></li>
+          <li><a href="Balance.html">Balance</a></li>
+        </ul>
+      </li>
+      <li><a href="Transfer.html">Transfer</a></li>
+      <li><a href="Bills.html">Bills</a></li>
+      <li class="dropdown">
+        <a href="#" id="my-account">Transactions &#9662;</a>
+        <ul class="dropdown-menu">
+          <li><a href="ClientTransactions.html">View All Transactions</a></li>
+          <li><a href="CardTransactions.html">View Cards Transactions</a></li>
+        </ul>
+      </li>
+	  <li><a href="CreditCardPoints.html">My Points</a></li>
+      <li><a href="ClientAnnoun.html" id="anouncments">Announcements</a></li>
+	   <li><a href="Urgent.html" id="urgent">Urgent</a></li>
     </ul>
-</nav>
+  </nav>
 <body>
 
 <div class="container">
