--- a/SE/CreditCardPoints.html
+++ b/SE/CreditCardPoints.html
@@ -60,7 +60,7 @@
     <nav>
     <ul class="menu">
       <li><a href="ClientPage.html" id="home">Home</a></li>
-      <li><a href="ContactUs.html" id="contact">Contact</a></li>
+      <li><a href="ClientContact.html" id="contact">Contact</a></li>
       <li class="dropdown">
         <a href="#" id="my-account">My Account &#9662;</a>
         <ul class="dropdown-menu">
@@ -79,7 +79,7 @@
         </ul>
       </li>
 	  <li><a href="CreditCardPoints.html">My Points</a></li>
-      <li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
+      <li><a href="ClientAnnoun.html" id="anouncments">Announcements</a></li>
 	   <li><a href="Urgent.html" id="urgent">Urgent</a></li>
     </ul>
   </nav>
