Banker transaction edits

--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -31,9 +31,8 @@
           <a href="#" id="my-account">Client information &#9662;</a>
           <ul class="dropdown-menu">
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
-            <li><a href="Liabilities_Banker.html">Liabilities</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
-            <li><a href="ClientTransactions.html">Transfer History</a></li>	
+            <li><a href="BankerTransactions.html">Transfer History</a></li>	
             <li><a href="Loan_requests.html">Loan requests</a></li>
             <li><a href="credit_card_requests.html">Credit requests</a></li>
           </ul>
