--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -26,7 +26,7 @@
 </header>
    <nav>
       <ul class="menu">
-        <li><a href="HomeHome.html" id="home">Home</a></li>
+        <li><a href="BankerPage.html" id="home">Home</a></li>
         <li class="dropdown">
           <a href="#" id="my-account">Client information &#9662;</a>
           <ul class="dropdown-menu">
