--- a/SE/Personalinfo_admin.html
+++ b/SE/Personalinfo_admin.html
@@ -61,6 +61,7 @@
    <nav>
       <ul class="menu">
         <li><a href="AdminPage.html" id="home">Home</a></li>
+        <li><a href="ContactUs.html" id="contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" id="client-account">Client's Account &#9662;</a>
           <ul class="dropdown-menu">
@@ -71,11 +72,6 @@
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
-<<<<<<< HEAD
-=======
-    <li><a href="Bills_admin.html">Bills</a></li>
-
->>>>>>> f0348038eb20bd4e8da67bfebbb4e0aa6c84a5f0
       </ul>
     </nav>
   <main>
@@ -115,7 +111,7 @@
       </table>
     </div>
     <div class="right-side">
-      <div class="buttons">
+          <div class="buttons">
         <label for="update-input">edit:</label>
         <input type="text" id="update-input" class="textbox" placeholder="edit">
         <button class="update-button">Edit Account</button>
