--- a/SE/User search.html
+++ b/SE/User search.html
@@ -153,6 +153,7 @@
         alert('Please enter Client user id');
       }else{
       alert('Gaining access to User with an id ' + user_id);
+      window.location.href = "BankerTransactions.html";
     }
    
   });
