--- a/SE/BankerPage.html
+++ b/SE/BankerPage.html
@@ -32,13 +32,15 @@
           <ul class="dropdown-menu">
             <li><a href="PersonalinfoBanker.html">Personal Information</a></li>
             <li><a href="Balance_Banker.html">Balance</a></li>
-            <li><a href="User search.html">Transfer History</a></li>	
+            <li><a href="BankerTransactions.html">Transfer History</a></li>	
             <li><a href="Loan_requests.html">Loan requests</a></li>
             <li><a href="credit_card_requests.html">Credit requests</a></li>
           </ul>
         </li>
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
     <li><a href="Complaints_banker.html">Complaints</a></li>
+    <li> <a href="Urgent_banker.html">Card Urgents</a></li>
+    <li> <a href="Card_replacement.html">Card Replacement</a></li>
       </ul>
     </nav>
     </body>
