--- a/SE/Card_replacement.html
+++ b/SE/Card_replacement.html
@@ -69,7 +69,7 @@
 		<li><a href="Anouncements.html" id="anouncments">Announcements</a></li>
     <li> <a href="Complaints_banker.html">Complaints</a></li>
     <li> <a href="Urgent_banker.html">Card Urgents</a></li>
-    <li> <a href="Complaints_banker.html">Card Replacement</a></li>
+    <li> <a href="Card_replacement.html">Card Replacement</a></li>
       </ul>
     </nav>
  <main>
