--- a/SE/Balance_Banker.html
+++ b/SE/Balance_Banker.html
@@ -48,15 +48,15 @@
       margin-bottom: 20px;
     }
 
-    .debit-card-table {
+    .balances-table {
       border-collapse: collapse;
       width: 100%;
       border: 2px solid black;
       margin-bottom: 20px;
     }
 
-    .debit-card-table th,
-    .debit-card-table td {
+    .balances-table th,
+    .balances-table td {
       border: 1px solid black;
       padding: 8px;
       text-align: left;
